# attpc_merger

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  e22508_pad_electronics_map.csv
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml
attpc_merger/: Cargo.toml  README.md
attpc_merger/src/: app.rs  main.rs
attpc_merger_cli/: Cargo.toml  README.md
attpc_merger_cli/src/: main.rs
libattpc_merger/: Cargo.toml  README.md
libattpc_merger/src/: asad_stack.rs  channel_map.rs  config.rs  constants.rs  error.rs  event.rs  event_builder.rs  evt_file.rs  evt_stack.rs  file_copier.rs  frib_builder.rs  graw_file.rs  graw_frame.rs  hardware_id.rs  hdf_writer.rs  lib.rs  merger.rs  pad_map.rs  process.rs  ring_item.rs  worker_status.rs
libattpc_merger/src/data/: default_pad_map.csv  rcnp_map.csv
libmerger/src/: asad_stack.rs  constants.rs  event_builder.rs  ring_item.rs
src/: main.rs
src/merger/: config.rs  evt_stack.rs  graw_file.rs  hdf_writer.rs  merger.rs  process.rs
src/ui/: app.rs  mod.rs
