[workspace]
members = [
    "libattpc_merger",
    "attpc_merger", 
    "attpc_merger_cli",
]
resolver="2"

[workspace.package]
authors = ["Gordon McCann"]
edition = "2021"
license = "MIT"
license-file = "LICENSE.txt"
version = "0.2.1"
repository = "https://github.com/ATTPC/attpc_merger"
readme = "README.md"

[workspace.dependencies]
libattpc_merger = { path = "./libattpc_merger"}
bit-set = "0.8.0"
bitvec = "1.0.1"
byteorder = "1.5.0"
fxhash = "0.2.1"
hdf5 = { package = "hdf5-metno", version = "0.9.2" }
human_bytes = "0.4.3"
ndarray = "0.16.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_yaml = "0.9.34"
time = "0.3.36"
spdlog-rs = "0.3.13"
