[package]
name="attpc_merger"
readme="README.md"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
libattpc_merger.workspace = true
eframe = "0.31.0"
spdlog-rs.workspace = true
serde.workspace = true
serde_yaml.workspace = true
rfd = "0.15.2"
