[package]
name = "attpc_merger_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
libattpc_merger = { path = "../libattpc_merger" }
log = "0.4.22"
simplelog = "0.12.2"
serde = { version = "1.0.204", features = ["derive"] }
serde_yaml = "0.9.34"
clap = "4.5.13"
indicatif = "0.17.8"
indicatif-log-bridge = "0.2.2"
