[package]
name = "attpc_merger_cli"
readme="README.md"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
libattpc_merger.workspace = true
log.workspace = true
serde.workspace = true
serde_yaml.workspace = true
simplelog.workspace = true
clap = "4.5.16"
indicatif = "0.17.8"
indicatif-log-bridge = "0.2.2"
