[package]
name = "attpc_merger_cli"
readme="README.md"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
libattpc_merger.workspace = true
spdlog-rs.workspace = true
serde.workspace = true
serde_yaml.workspace = true
clap = "4.5.37"
indicatif = "0.17.11"
